# AgentGate

./: .gitignore  DECISIONS.md  LICENSE  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/agentgate/: main.py
backend/agentgate/agent/: demo.py  graph.py
backend/agentgate/api/: verify.py
backend/agentgate/core/: decision.py  duplicate_store.py  extractor.py  grounding.py  llm_json.py  llm_router.py  policy.py  retry.py  schemas.py  system_of_record.py  verifier.py
backend/agentgate/mcp/: server.py
backend/app/: main.py
backend/app/agent/: graph.py
backend/app/api/: verify.py
backend/app/core/: decision.py  duplicate_store.py  grounding.py  llm_router.py  policy.py  retry.py  schemas.py  tracing.py  verifier.py
backend/data/sample_invoices/: acme_good.txt
backend/data/system_of_record/: acme-widgets-q1.json
backend/eval/: dataset.jsonl  harness.py
backend/policies/: default.yaml
backend/tests/: conftest.py  test_agent.py  test_api.py  test_decision.py  test_demo.py  test_duplicate_store.py  test_eval.py  test_fail_closed.py  test_frame.py  test_grounding.py  test_live.py  test_mcp.py  test_policy.py  test_retry.py  test_scoring.py  test_system_of_record.py
docs/: real-world-problem.md
frontend/: .gitignore  copy-pdfjs.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/: LandingPage.tsx  SiteFooter.tsx  SiteNav.tsx  VerifyDashboard.tsx
frontend/lib/: invoice-parser.ts  invoices.ts  pdf-text.ts  samples.ts  site.ts  types.ts
frontend/public/invoices/: northwind-inv-12500.txt
frontend/tests/: e2e.spec.ts
frontend/tests/fixtures/: brightpath-quotation.txt  clean-request.json  meridian-quote-copy.txt  meridian-viewer-copy.txt
