[project]
name = "agentgate"
version = "0.1.0"
description = "Pre-action reliability gate for AI agents — verifies proposed actions against caller-supplied source evidence."
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
llm = ["litellm>=1.0"]
agent = ["langgraph>=0.2"]
server = ["fastapi>=0.115", "uvicorn>=0.30"]
# Pinned to the langfuse v2 client API (D37); revisit for v3/OTEL with the dashboard.
tracing = ["langfuse>=2,<3"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "langgraph>=0.2", "fastapi>=0.115", "httpx>=0.27", "mcp>=1.2"]

[project.scripts]
agentgate-mcp = "agentgate.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: real LLM-provider calls; run manually, never in CI",
]
addopts = "-m 'not live'"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentgate*"]

[tool.setuptools.package-data]
# The default policy ships inside the wheel — DEFAULT_POLICY loads it at
# import, so a clean install without it would raise PolicyError (Slice 8 gate).
agentgate = ["policies/*.yaml"]
